# axe-map-editor

./: .gitignore  CMakeLists.txt  README.md  battle-map.sln  battle-map.vcxproj  battle-map.vcxproj.filters  br.sh  command.hpp  editor_state.hpp  makefile  mapdata.xml  notepad.txt  rebuild.sh  state_machine.cpp  state_machine.hpp  tilemap.cpp  tilemap.hpp  util.cpp  util.hpp
include/: abstract_state.hpp  application.hpp  command.hpp  edit_commands.hpp  editor_events.hpp  editor_state.hpp  file_chooser_state.hpp  file_dialog.hpp  gui.hpp  initiative_tracker.hpp  input.hpp  lerp.hpp  map.hpp  map_editor.hpp  play_state.hpp  state_machine.hpp  tile_selector.hpp  util.hpp  vec.hpp  view.hpp  viewer.hpp  web.hpp
resources/tex/: sheet.xcf  sheet2.xcf
src/: application.cpp  editor_state.cpp  file_chooser_state.cpp  gui.cpp  initiative_tracker.cpp  input.cpp  lerp.cpp  main.cpp  map.cpp  map_editor.cpp  play_state.cpp  state_machine.cpp  tile_selector.cpp  util.cpp  view.cpp  web.cpp
unused/: button.hpp
